# obs-reactive-facecam-plugin

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
ci/linux/: package-ubuntu.sh
data/frames/: GreenMarco.webm  Marco-Amarillo.webm  Marco-Default.webm  Marco-Negro.webm  Marco-Rojo.webm  Marco01.webm  Marco02.webm  RedMarco02.webm
installer/: installer-Windows.iss.in
media-playback/: closest-format.h  decode.c  decode.h  media.c  media.h
src/: defs.h  healthbar-sensor-webcam-frame.c  plugin-main.c  reactive-facecam-plugin.c
src/api-communication/: api-communication.c  api-communication.h
src/game-capture/: game-capture.c  game-capture.h
src/video-player/: video-player.c  video-player.h
